# SE_Project

Client/Build_Chang/: CMakeCache.txt  Makefile  cmake_install.cmake  run_automoc.cpp
Client/Build_Chang/run_automoc.dir/: moc_add.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_passwd_modify.cpp  moc_setting.cpp
Client/Source/: CMakeLists.txt  SE_Definition.h  SE_winsock2.cpp  SE_winsock2.h  add.cpp  add.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  passwd_modify.cpp  passwd_modify.h  setting.cpp  setting.h  ui_add.h  ui_login.h  ui_mainwindow.h  ui_passwd_modify.h  ui_setting.h
Client/Source/gui/: add.ui  login.ui  mainwindow.ui  passwd_modify.ui  setting.ui
Requirment_Document/: ~$系統需求文件.docx  系統需求文件.docx
Server/Build_Chang/: CMakeCache.txt  Makefile  cmake_install.cmake
Server/Build_Chang/lib/: libmysql.def
Server/Source/: CMakeLists.txt  Client_thread.cpp  Client_thread.h  SE_Definition.h  SE_MySQL.cpp  SE_MySQL.h  SE_winsock2.cpp  SE_winsock2.h  format.sql  main.cpp
Server/Source/SE_winsock2/: CMakeLists.txt
Server/Source/src/: CMakeLists.txt
Server/vs/Server/: Server.sln
Server/vs/Server/Server/: Client_thread.cpp  Client_thread.h  SE_Definition.h  SE_MySQL.cpp  SE_MySQL.h  SE_winsock2.cpp  SE_winsock2.h  Server.vcxproj  Server.vcxproj.filters  main.cpp
Server/vs/Server/Server/Debug/: vc140.idb
Server/vs/Server/Server/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Server.lastbuildstate
System_Design/: 系統設計文件.docx
gui/: add.ui  login.ui  mainwindow.ui  passwd_modify.ui  setting.ui
