CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(SE_Server)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
	cmake_policy(SET CMP0023 NEW)
endif(COMMAND cmake_policy)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc \"${MYSQL_LIBRARY_DIR}/libmysql.lib\" \"${MYSQL_LIBRARY_DIR}/mysqlclient.lib\"" )
#SET( CMAKE_LINKER_FLAGS "-static-libgcc \"C:\\Program Files\\MySQL\\MySQL Server 5.7\\lib\\libmysql.lib\" " )
#add_library(sql SHARED IMPORTED)
#set_property(TARGET sql PROPERTY IMPORTED_LOCATION ${MYSQL_LIBRARY_DIR}/libmysql.dll)
#set_property(TARGET sql PROPERTY IMPORTED_IMPLIB ${MYSQL_LIBRARY_DIR}/libmysql.lib)
#set_property(TARGET sql PROPERTY IMPORTED_LOCATION ${MYSQL_LIBRARY_DIR}/mysqlclient.lib)

ADD_EXECUTABLE(run main.cpp SE_winsock2.cpp Client_thread.cpp SE_MySQL.cpp)
TARGET_LINK_LIBRARIES(run wsock32 ws2_32 ${LIBS})
find_package(MySQL)
MESSAGE("$ENV{ProgramFiles}")
if(MySQL_FOUND)
	INCLUDE_DIRECTORIES(${MySQL_INCKUDE_DIRS})
	TARGET_LINK_LIBRARIES(run ${MYSQL_LIBRARIES})
endif(MySQL_FOUND)
